docs: archive unsupported server experiment