@@ -1,171 +1,80 @@
 # SurvivalCore
 
-Custom Minecraft server fork based on Paper 1.21.8 for the WeenieSMP network. Built for multi-core performance on 6-core servers with full Bukkit/Spigot/Paper plugin compatibility.
+> **Status: archived experiment.** This repository is not a supported Minecraft server distribution. Its current patch set has no verified build, release artifact, benchmark suite, plugin-compatibility matrix, or production operating record.
 
-## What Is This?
+SurvivalCore is an experimental Paper 1.21.8 patch set exploring server performance, administrative tooling, and configurable survival mechanics. It is preserved as a code-study artifact.
 
-SurvivalCore cherry-picks proven optimizations from Leaf, Gale, Lithium, and Pufferfish into a single maintainable Paper fork. Unlike Purpur (which adds hundreds of mostly-unused feature patches), SurvivalCore focuses exclusively on performance.
+## What is in this repository
 
-### Key Features
+- A Gradle and paperweight patcher configuration pinned to one Paper commit
+- A queue of server build and Minecraft source patches under `survivalcore-server/`
+- An API build patch under `survivalcore-api/`
+- Parallel Java source snapshots under `sources/`; these are review aids, not a separate wired source set
+- Experimental components for entity tick budgets, pathfinding and task executors, redstone throttling, monitoring, configuration, administrative commands, and quality-of-life behavior
+- Scripts intended to apply the patch queue, build a Paperclip JAR, and update the pinned upstream reference
 
-- **Async Entity Tracking** - Position/velocity/metadata broadcasts moved off main thread
-- **Async Pathfinding** - A* calculations submitted to worker thread pool
-- **Async Mob Spawning** - Spawn position calculation done async, entity creation stays on main thread
-- **FastMath** - Trig lookup tables, bit-manipulation floor/ceil, fast inverse sqrt
-- **SIMD Acceleration** - Java Vector API for batch distance/color calculations
-- **Hopper Optimization** - Lithium-style inventory caching and skip-empty checks
-- **Entity AI Improvements** - Distance-based tick frequency, goal selector throttling
-- **Object Pooling** - Thread-local pools for BlockPos, Vec3, AABB
-- **Performance Monitoring** - Per-tick timing breakdown and async pool utilization
-- **Villager Lobotomize** - Disable AI for stuck villagers (from Purpur)
+The presence of a patch or class shows an implementation attempt. It does not establish correctness, safety, performance, or compatibility.
 
-Everything is configurable via `config/survivalcore.yml` with sensible defaults and kill switches.
+## What is not established
 
-## Architecture
+This repository does **not** provide evidence for claims that the earlier README made:
 
-![Architecture](docs/architecture.svg)
+- no project-owned unit or stress tests are committed
+- no repeatable benchmarks, raw results, hardware profile, or baseline comparison are committed
+- no plugin compatibility suite or tested-plugin matrix is committed
+- no tagged release or checksum is published from this tree
+- no current CI system validates the patch queue or build
+- no load, soak, corruption-recovery, or thread-safety results are available
+- no provenance record demonstrates that implementations were directly ported from the projects previously named in the README
 
-## Building
+Accordingly, this project makes no performance-improvement or “full compatibility” claim.
 
-Requires Java 21 and Git.
+## Intended patch flow
+
+The build files target Java 21, Gradle 8.14.5, paperweight `2.0.0-SNAPSHOT`, Minecraft 1.21.8, and the Paper commit in `gradle.properties`.
+
+The original intended workflow was:
 
 ```bash
-# Clone
-git clone https://github.com/JadenRazo/SurvivalCore.git
-cd SurvivalCore
-
-# Apply upstream Paper patches
 ./gradlew applyAllPatches
-
-# Build the server JAR
 ./gradlew createMojmapPaperclipJar
-
-# Output: build/libs/survivalcore-paperclip-*-mojmap.jar
 ```
 
-### Development Workflow
+These commands require network access and upstream artifacts. They are documented to explain the repository structure, not as a current build guarantee. The pinned Paper commit, snapshot plugin, patch context, and dependency repositories may have drifted.
 
-```bash
-# After modifying files in paper-server/src/:
-./gradlew rebuildPatches
+If studying the patch queue, review these locations first:
 
-# To update Paper upstream:
-./scripts/upstream-update.sh
-./gradlew applyAllPatches
-# Resolve any conflicts
-./gradlew rebuildPatches
+```text
+build.gradle.kts
+gradle.properties
+survivalcore-server/build.gradle.kts.patch
+survivalcore-server/minecraft-patches/
+survivalcore-api/build.gradle.kts.patch
 ```
 
-## JVM Flags
+## Risk notes
 
-SurvivalCore is designed for ZGC Generational (Java 21+):
+Minecraft and Paper APIs frequently assume ownership by the main server thread. Moving pathfinding, entity tracking, chunk work, spawning, or mutable game state to executors can introduce races, stale reads, deadlocks, ordering changes, world corruption, and plugin-visible behavioral differences.
 
-```bash
-java \
-  -Xms20G -Xmx20G \
-  -XX:+UseZGC -XX:+ZGenerational \
-  -XX:+AlwaysPreTouch \
-  -XX:+DisableExplicitGC \
-  -XX:+PerfDisableSharedMem \
-  -XX:+UseStringDeduplication \
-  --add-modules=jdk.incubator.vector \
-  -jar survivalcore.jar nogui
-```
+Before anyone adapts this work, a new maintained fork should:
 
-The `--add-modules=jdk.incubator.vector` flag enables SIMD acceleration. Without it, SIMD operations fall back to scalar code automatically.
+1. rebase each patch against a supported Paper version and document its provenance
+2. establish a clean, reproducible build from a fresh clone
+3. add focused concurrency and correctness tests before enabling any async behavior
+4. run controlled benchmarks against unmodified Paper with raw data and an explicit methodology
+5. run representative plugin, restart, crash-recovery, and long-duration soak tests
+6. ship experimental features disabled by default with measured rollback paths
 
-## Configuration
+Do not run this patch set against a valued world or public server without independent review, backups, restore testing, and acceptance of data-loss risk.
 
-Generated on first run at `config/survivalcore.yml`. All optimizations can be independently toggled. Thread count of `0` means auto-detect based on available cores.
+## Why it was archived
 
-```yaml
-async:
-  entity-tracker:
-    enabled: true
-    max-threads: 0       # auto: cores/4
-    compat-mode: true    # sync tracking for NPC plugins
-  pathfinding:
-    enabled: true
-    max-threads: 0       # auto: cores/3
-  mob-spawning:
-    enabled: true
+The project’s public claims outpaced its evidence and maintenance. Archiving preserves the implementation work without presenting it as a reliable product. A future revival should start from a supported upstream version and treat reproducibility, correctness, and evidence as release gates.
 
-performance:
-  simd:
-    enabled: true
-  fast-math:
-    enabled: true
-  hopper:
-    optimized-inventory-caching: true
-    skip-empty-check: true
-    throttle-when-full: true
-  entity-ai:
-    inactive-goal-selector-throttle: true
-    distance-based-tick-frequency: true
-    brain-tick-batching: true
-  memory:
-    object-pooling: true
+## Security
 
-redstone:
-  implementation: alternate-current
-
-monitoring:
-  enabled: true
-  report-interval: 6000  # ticks (5 min)
-```
-
-## Thread Allocation (6 Cores)
-
-| Core | Assignment |
-|------|-----------|
-| 0 | Main tick thread |
-| 1 | Chunk system workers |
-| 2 | Entity tracker pool |
-| 3 | Pathfinding pool |
-| 4 | Mob spawning + misc async |
-| 5 | Netty I/O + GC threads |
-
-## Testing
-
-Unit tests and stress tests validate every subsystem. Run them with:
-
-```bash
-./gradlew :survivalcore-server:test
-```
-
-### Stress Test Suite
-
-The `StressTest` class hammers each optimization subsystem under extreme load to catch regressions and verify performance at scale. All tests include timing assertions to flag unexpected slowdowns.
-
-| Test | What It Does | Scale |
-|------|-------------|-------|
-| EntityTickBudget: Massive Load | Budget checks under heavy entity count | 10,000 entities/tick |
-| EntityTickBudget: Index Rotation | Start index wrapping at high speed | 100,000 rotations |
-| TNTBatcher: Clustered Explosions | Batch merging with nearby + scattered TNT | 10,000 TNT (5k clustered, 5k spread) |
-| TNTBatcher: Large Area Spread | Batching across a 10km x 10km area | 10,000 TNT |
-| TickCoalescer: Position Tracking | Duplicate tick detection and blocking | 100,000 unique positions |
-| TickCoalescer: Reset Cycles | Repeated fill/reset/refill under load | 100 cycles, 1,000 positions each |
-| EntityCleanup: Escalating Counts | Threshold transitions from 0 to 50k entities | 50,000 entity count sweep |
-| EntityCleanup: Type Checks | Protected/despawnable/force-despawn lookups | 600,000 type checks |
-| FarmDetector: Chunk Simulation | Varying entity density across many chunks | 500 chunks, 0-1000 entities each |
-| FarmDetector: Tick Throttling | shouldTickEntity under critical-density chunks | 1,000,000 tick checks |
-| ObserverDebounce: Redstone Clock | Simulates a lag machine with rapid observer fires | 50,000 observers over 20 ticks |
-| ObserverDebounce: Cleanup | Stale entry cleanup under heavy tracking | 10,000 tracked observers |
-| ObjectPool: Multi-Threaded | Concurrent acquire/release across threads | 8 threads, 100k ops each |
-| ObjectPool: Scoped Resources | Try-with-resources lifecycle stress | 10,000 scoped acquisitions |
-| FastMath: Trig Operations | Sin/cos accuracy at scale | 1,000,000 calculations |
-| FastMath: Distance Calculations | 3D distanceSq with random coordinates | 1,000,000 calculations |
-| FastMath: Floor/Ceil Sweep | Integer rounding correctness | 1,000,000 operations |
-| FastMath: Sqrt/Atan2 Accuracy | Approximation error bounds | 1,000,000 calculations |
-| PerformanceMonitor: Timing Records | Recording entries across all categories | 1,000,000 records |
-| PerformanceMonitor: Counter Updates | Incrementing all counter types | 800,000 increments |
-| PerformanceMonitor: Mixed Workload | Interleaved timing + counter operations | 100,000 iterations |
-| Integrated: All Subsystems | Full tick simulation with every system active | 1,000 simulated game ticks |
-
-## Plugin Compatibility
-
-Full Bukkit/Spigot/Paper API compatibility. All existing plugins work without modification. The compat-mode flag for entity tracking ensures NPC plugins (Citizens, FancyNpcs) function correctly.
+See [SECURITY.md](SECURITY.md). Do not publish server credentials, world data, player data, or exploit details in an issue.
 
 ## License
 
-Patches are licensed under the same terms as Paper (GPL-3.0). Upstream Paper/Minecraft code retains its original licensing.
+The repository is distributed under GPL-3.0. Paper, Minecraft, and other upstream material retain their respective rights and licenses. Review provenance and upstream licensing before redistributing a derived build.
